# Q1ORM

./: CMakeLists.txt  LICENSE  README.md
Docs/: CMakeLists.txt  CRUDGuide.md  GettingStarted.md
Examples/: CMakeLists.txt
Examples/AggregateFunctionExample/: CMakeLists.txt  Person.h  main.cpp
Examples/CRUDExampleExample/: CMakeLists.txt  Person.h  main.cpp  persondto.cpp
Examples/DatabaseInstallExample/: CMakeLists.txt  main.cpp
Examples/DbContextExample/: Address.h  AddressDto.h  CMakeLists.txt  Object.h  ObjectDto.h  Person.h  Profile.h  ProfileDto.h  main.cpp
Examples/EagerLoadingExample/: Address.h  AddressDto.h  CMakeLists.txt  Person.h  PersonDto.h  main.cpp
Examples/JoinTablesExample/: CMakeLists.txt  Person.h  PersonDto.h  main.cpp
Examples/SoloExample/: CMakeLists.txt  applicationdbcontext.cpp  applicationdbcontext.h  main.cpp
Examples/SoloExample/Mapping/: CityMap.h  CountryMap.h
Examples/SoloExample/Models/: City.h  Country.h
Examples/SoloExample/Repository/: IRepository.h  Repository.h
Examples/SoloExample/Services/: insertservice.cpp  insertservice.h
Examples/UnitTestExample/: CMakeLists.txt  PostgreSqlTests.cpp  PostgreSqlTests.h  Q1ORMTests.cpp  Q1ORMTests.h  SqlGenerationTests.cpp  SqlGenerationTests.h  SqlServerTests.cpp  SqlServerTests.h  main.cpp
Releases/: Release-0.1.7z
Releases/Release-0.1/include/: Q1ORM.h
Releases/Release-0.1/include/Q1Core/Q1Context/: Q1Connection.h  Q1Context.h
Releases/Release-0.1/include/Q1Core/Q1Entity/: Q1Column.h  Q1Entity.h  Q1Table.h
Releases/Release-0.1/include/Q1Core/Q1Migration/: Q1Migration.h  Q1MigrationQuery.h
Releases/Release-0.1/include/Q1Core/Q1Query/: Q1Query.h
Releases/Release-0.1/lib/: Q1ORM.lib
Tools/: CMakeLists.txt
Tools/ExampleProjectModifier/: CMakeLists.txt  main.cpp
Tools/ExampleProjectModifier/Template/: main.cpp
Tools/ReleaseInstaller/: CMakeLists.txt  main.cpp
Tools/Template/: CMakeLists.txt
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Q1ORM.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-release/Docs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Docs.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-release/Examples/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Examples.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-release/Examples/DatabaseInstallExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  DatabaseInstallExample.sln  DatabaseInstallExample.vcxproj  DatabaseInstallExample.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-release/Examples/DatabaseInstallExample/DatabaseInstallExample.dir/Release/: DatabaseInstallExample.exe.recipe
build-release/Examples/DatabaseInstallExample/DatabaseInstallExample_autogen/include_Release/: main.moc.d
build-release/Examples/SoloExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SoloExample.sln  SoloExample.vcxproj  SoloExample.vcxproj.filters  cmake_install.cmake
build-release/Examples/SoloExample/SoloExample.dir/Release/: SoloExample.exe.recipe
build-release/Examples/UnitTestExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  UnitTestExample.sln  UnitTestExample.vcxproj  UnitTestExample.vcxproj.filters  cmake_install.cmake
build-release/Examples/UnitTestExample/UnitTestExample.dir/Release/: UnitTestExample.exe.recipe
build-release/Examples/UnitTestExample/UnitTestExample_autogen/: mocs_compilation_Release.cpp
build-release/Src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Src.sln  Src.vcxproj  Src.vcxproj.filters  cmake_install.cmake
build-release/Src/Release/: Q1ORM.exp  Q1ORM.lib
build-release/Src/Src.dir/Release/: Q1ORM.dll.recipe
build-release/Src/Src.dir/Release/Src.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Src.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-release/Src/Src_autogen/: mocs_compilation_Release.cpp
build-release/Src/Src_autogen/include_Release/SDZXFQWGPJ/: moc_Q1DatabaseInstall.cpp.d
build-release/Tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tools.sln  cmake_install.cmake
build-release/Tools/ExampleProjectModifier/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ExampleProjectModifier.sln  ExampleProjectModifier.vcxproj  ExampleProjectModifier.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-release/Tools/ExampleProjectModifier/ExampleProjectModifier.dir/Release/: EPModifier.exe.recipe  icon.res
build-release/Tools/ReleaseInstaller/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ReleaseInstaller.sln  ReleaseInstaller.vcxproj  ReleaseInstaller.vcxproj.filters  cmake_install.cmake
build-release/Tools/ReleaseInstaller/ReleaseInstaller.dir/Release/: ReleaseInstaller.exe.recipe  icon.res
build-release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-release/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: CMakeLists.txt  Q1ORM.cpp  Q1ORM_global.h
src/Q1Core/Q1Context/: Q1Connection.h  Q1Context.cpp
src/Q1Core/Q1Entity/: Q1Entity.cpp  Q1Entity.h  Q1Relation.h  Q1Table.h
src/Q1Core/Q1Migration/: Q1Migration.cpp  Q1MigrationQuery.cpp  Q1MigrationQuery.h
src/Q1Core/Q1Query/: Q1Query.h
src/Q1DatabaseInstall/: Q1DatabaseInstall.cpp  Q1DatabaseInstall.h  postgresql_install.bat
(+68 files in other folders)
